ix: corrige erro de coluna e configura banco MySQL
- Corrige typo 'longradouro' para 'logradouro' na classe Endereco.java
- Ajusta application.properties para conectar ao MySQL (vollmed_api)
- Remove configurações do H2 database
- Atualiza README.md com documentação do projeto

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,16 @@
 spring.application.name=crud-spring
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=update
-spring.h2.console.enabled=true
+
+# DataSource MySQL local (banco existente: vollmed_api)
+spring.datasource.url=jdbc:mysql://localhost:3306/vollmed_api?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=Mysql@2025
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Deixe o schema sob controle do Flyway
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+
+# Flyway usando o mesmo banco
+spring.flyway.url=jdbc:mysql://localhost:3306/vollmed_api?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.flyway.user=root
+spring.flyway.password=Mysql@2025
